Leaflet map: fixed wrong colors of images in popup when dark theme is set

--- a/src/webserver/private/less/main.less
+++ b/src/webserver/private/less/main.less
@@ -119,6 +119,11 @@ hr {
 	padding: 0.2em 0.5em;
 }
 
+.leaflet-container .leaflet-popup-content-wrapper {
+	background-color: @theme-background-color;
+	color: @theme-color-text;
+}
+
 #advanced-search-map {
 	width: 100%;
 	height: 20em;
