--- a/src/webserver/private/less/themes/main-dark.less
+++ b/src/webserver/private/less/themes/main-dark.less
@@ -14,7 +14,6 @@
  */
 .leaflet-control-attribution,
 .leaflet-control,
-.leaflet-layer,
-.leaflet-popup {
+.leaflet-layer {
   filter: invert(100%) hue-rotate(180deg) brightness(95%) contrast(90%);
 }
